@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.colombiatv"
        name="ColombiaTV"
-       version="1.4.3"
+       version="1.4.4"
        provider-name="Wiiego">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
