@@ -1,3 +1,7 @@
+[B] Version 1.4.4 [/B]
+- Update nowlive support
+- Update lw support
+
 [B] Version 1.4.3 [/B]
 - Update hqq support
 - Add zenplayer support
